# e-cup-2025-ml-challenge

./: README.md  base-finetoon.ipynb  baselineee - Copy.ipynb  ml-ozon-recsys-24 08 25.ipynb
other/: New Text Document.txt  README.md  eda_report_20250819_1549.txt  ml-ozon-recsys-24 08 25.ipynb  ml_ozon_recsys.py  pyproject.toml  Отчет.docx
other/csv_20250819_1549/csv_20250819_1549/: interactions_event_type_freq_canon.csv  interactions_event_type_freq_raw_sample.csv  items_root_category_freq.csv  orders_status_freq_canon.csv  orders_status_freq_raw.csv  users_seq_len_hist_sample.csv
